<resources>
    <string name="app_name">Health Records</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="get_started_str">Get Started</string>
    <string name="timely_medical_intervention_str">Timely Medical Intervention</string>
    <string name="description_one_str">Information Availability\nensures faster and timely\nmedical interventions.</string>
    <string name="faster_laboratory_services_str">Faster Laboratory Services</string>
    <string name="description_two_str">Vital information availability\nguarantees faster and\nfocused services delivry.</string>
    <string name="better_personal_health_str">Better Personal Health</string>


    <string name="dr_ben_ani">DR BEN ANI</string>
    <string name="ben_ani_stjoseph_com">BEN.ANI@STJOSEPH.COM</string>
    <string name="st_joseph_hospital_lekki">ST. JOSEPH HOSPITAL, LEKKI</string>
    <string name="_08122233344">08122233344</string>
    <string name="enter_patient_id">ENTER PATIENT ID</string>
    <string name="mrs_adams_ken">MRS ADAMS KEN</string>
    <string name="_237754600ed">237754600ED</string>
    <string name="adamsken_gmail_com">adamsken@gmail.com</string>
    <string name="practitioner">PRACTITIONER</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="date">DATE</string>
    <string name="patient_name">PATIENT NAME</string>
    <string name="hospital_name">HOSPITAL NAME</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="edit_medical_details">Edit Medical Details</string>
    <string name="prescription">Prescription</string>
    <string name="type">Type</string>
    <string name="is_sensitive_or_not">Is sensitive or not</string>
    <string name="doctor_s_note">Doctor\'s Note</string>
    <string name="doctor_s_diagnosis_str">Doctor\'s Diagnosis</string>
    <string name="patient_s_diagnosis_string">Patient\'s Diagnosis</string>
    <string name="doctor_s_note_str">Doctor\'s Note</string>
    <string name="nurse_s_comment_str">Nurse\'s Comment</string>
    <string name="note">Note</string>
    <string name="patient_registration_form">Patient Registration Form</string>
    <string name="healthcare_no">Healthcare No</string>
    <string name="add_comments">Add Comments</string>
    <string name="patient_s_first_name">Patient\'s First Name</string>
    <string name="patient_s_last_name">Patient\'s Last Name</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="preview">Preview</string>
    <string name="welcome">Kindly fill in the institution details</string>
    <string name="healthcare_provider_name">HealthCare Provider Name</string>
    <string name="forgot_password_str">Forgot Password</string>
    <string name="email_str">Email</string>
    <string name="uniqueid_str">UniqueID</string>
    <string name="send_str">Send</string>
    <string name="reset_password_str">Reset Password</string>
    <string name="password_str">Password</string>
    <string name="confirm_password_str">Confirm Password</string>
    <string name="reset_str">Reset</string>
    <string name="log_out_str">Log Out</string>
    <string name="add_history_str">Add History</string>
    <string name="history_str">History</string>
    <string name="vital_info_str">Vital Info</string>
    <string name="home_str">Home</string>
    <string name="vital_information_str">Vital Information</string>
    <string name="mrs_adam_ken_str">MRS ADAM KEN</string>
    <string name="_23335698ed_str">23335698ED</string>
    <string name="genotype_str">Genotype</string>
    <string name="o_positive_str">O Positive</string>
    <string name="milk_cheese_pollen_str">Milk, Cheese, Pollen</string>
    <string name="nill_str">Nill</string>
    <string name="blood_group_str">Blood Group</string>
    <string name="aa_str">AA</string>
    <string name="allergies_str">Allergies</string>
    <string name="disabilities_str">Disabilities</string>
    <string name="patient_history_str">Patient History</string>
    <string name="edit_patient_details_str">Edit Patient Details</string>
    <string name="edit_str">Update Record</string>
    <string name="patient_s_prescription">Patient\'s Prescription</string>
    <string name="forgot_your_password_str">Forgot your password?</string>
    <string name="doctor_page">Doctor Page</string>
    <string name="submit_str">Submit</string>
    <string name="patient_registration_number_str">Patient registration NO.</string>
    <string name="upload_str">Upload</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_data_found_for_this_category">No Data found for this category!</string>
    <string name="fetching_patient_medical_records">Fetching Patient medical records...</string>
    <string name="view_patient_s_vital_data">View Patient\'s Vital Data</string>

    <!-- PATIENT DETAILS- YEARS -->
    <string-array name="years">
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
    </string-array>
</resources>