<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ui.resetpassword.ForgotPasswordFragment">

    <TextView
        android:id="@+id/fragment_forgot_password_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:text="@string/forgot_password_str"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/fragment_forgot_password_email_et"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:hint="@string/email_str"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_forgot_password_title_tv" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/fragment_forgot_password_unique_id_et"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/white"
        android:hint="@string/uniqueid_str"
        android:inputType="text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_forgot_password_email_et" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_forgot_password_send_btn"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/green"
        android:text="@string/send_str"
        android:textAllCaps="false"
        android:layout_marginTop="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_forgot_password_unique_id_et" />

</androidx.constraintlayout.widget.ConstraintLayout>

