<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.patientdetails.PatientRegistrationForm">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/fragment_patient_reg_form_toolbar"
            layout="@layout/patient_registration_form_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patient_reg_form_healthcare_no_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:height="50dp"
            android:background="@drawable/edittext_ash_bg_curved_sides"
            android:hint="@string/healthcare_no"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_patient_reg_form_toolbar" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patient_reg_form_first_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:height="50dp"
            android:background="@drawable/edittext_ash_bg_curved_sides"
            android:hint="@string/patient_s_first_name"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patient_reg_form_healthcare_no_et" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patient_reg_form_last_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:height="50dp"
            android:background="@drawable/edittext_ash_bg_curved_sides"
            android:hint="@string/patient_s_last_name"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patient_reg_form_first_name_et" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/patient_reg_form_gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:autofillHints="Gender"
            android:background="@drawable/edittext_ash_bg_curved_sides"
            android:minHeight="50dp"
            android:pointerIcon="arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patient_reg_form_last_name_et" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patient_reg_form_height_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:height="50dp"
            android:background="@drawable/edittext_ash_bg_curved_sides"
            android:hint="@string/height"
            android:inputType="number"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patient_reg_form_gender_spinner" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patient_reg_form_weight_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:height="50dp"
            android:background="@drawable/edittext_ash_bg_curved_sides"
            android:hint="@string/weight"
            android:inputType="number"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patient_reg_form_height_et" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patient_reg_form_address_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:height="120dp"
            android:background="@drawable/edittext_ash_bg_curved_sides"
            android:gravity="start"
            android:hint="@string/address"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patient_reg_form_weight_et" />

        <!--    <com.google.android.material.textfield.TextInputEditText-->
        <!--        android:id="@+id/patient_reg_form_"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_marginHorizontal="16dp"-->
        <!--        android:layout_marginTop="12dp"-->
        <!--        android:height="50dp"-->
        <!--        android:background="@drawable/edittext_ash_bg_curved_sides"-->
        <!--        android:hint="@string/healthcare_no"-->
        <!--        android:padding="12dp"-->
        <!--        app:layout_constraintTop_toBottomOf="@id/fragment_patient_reg_form_toolbar"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"/>-->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patient_reg_form_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:height="50dp"
            android:background="@drawable/edittext_ash_bg_curved_sides"
            android:hint="@string/city"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patient_reg_form_address_et" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/patient_reg_form_state_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:autofillHints="State"
            android:background="@drawable/edittext_ash_bg_curved_sides"
            android:minHeight="50dp"
            android:pointerIcon="arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patient_reg_form_city" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/patient_reg_form_marital_status_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:autofillHints="Gender"
            android:background="@drawable/edittext_ash_bg_curved_sides"
            android:minHeight="50dp"
            android:pointerIcon="arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patient_reg_form_state_spinner" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/patient_reg_form_preview_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            android:height="50dp"
            android:background="@drawable/button_bg"
            android:text="@string/preview"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/patient_reg_form_marital_status_spinner" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/patient_reg_form_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:height="50dp"
            android:background="@drawable/button_bg"
            android:text="@string/submit_str"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/patient_reg_form_preview_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>